--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
     <title>project</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 
 <body>
-    <div id="animalBtn"></div>
-    <form id="animalForm">
-        <label for="">Add An Animal</label>
-        <br>
-        <input type="text" name="" id="searchAnimal">
-        <input type="submit" value="Submit" id="submit">
-    </form>
-    <div id="showHere"></div>
+    <div class="container">
+        <div>
+        <div id="animalBtn"></div>
+        <form id="animalForm">
+            <label for="">Add a button</label>
+            <br>
+            <input type="text" name="" id="searchAnimal">
+            <input type="submit" value="ADD" id="submit">
+        </form>
+        <div id="showHere"></div>
+        </div>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
