--- a/index.html
+++ b/index.html
@@ -13,17 +13,23 @@
 
 <body>
     <div class="container">
-        <div>
+        <div class="row">
+        <div class="col-md-8">
         <div id="animalBtn"></div>
+        </div>
+        <div class="col-md-4">
         <form id="animalForm">
             <label for="">Add a button</label>
             <br>
             <input type="text" name="" id="searchAnimal">
             <input type="submit" value="ADD" id="submit">
         </form>
-        <div id="showHere"></div>
         </div>
-    </div>
+        </div>
+        <hr>
+        <div id="showHere"></div>
+     </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
